--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -5,7 +5,9 @@
       "build_source_folder": "dotnet",
       "build_output_subfolder": "sqlite-dotnet",
       "locale": "en-us",
-      "monikers": [],
+      "monikers": [
+        "msdata-sqlite-2.0.0"
+      ],
       "moniker_ranges": [],
       "open_to_public_contributors": true,
       "type_mapping": {
