--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -6,6 +6,8 @@
       "build_output_subfolder": "sqlite-dotnet",
       "locale": "en-us",
       "monikers": [
+        "msdata-sqlite-1.0.0",
+        "msdata-sqlite-1.1.0",
         "msdata-sqlite-2.0.0"
       ],
       "moniker_ranges": [],
