--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -98,5 +98,8 @@
       "target_framework": "net45",
       "version": "latest"
     }
-  ]
+  ],
+  "docs_build_engine": {
+    "name": "docfx_v3"
+  }
 }
