--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -49,12 +49,13 @@
       ]
     }
   ],
-  "notification_subscribers": [],
+  "notification_subscribers": [
+    "riande@microsoft.com"
+  ],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
-  "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -81,6 +82,7 @@
       "template_folder": "_themes.pdf"
     }
   },
+  "docs_build_engine": {},
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "dependent_packages": [
@@ -99,7 +101,5 @@
       "version": "latest"
     }
   ],
-  "docs_build_engine": {
-    "name": "docfx_v3"
-  }
+  "contribution_branch_mappings": {}
 }
