--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -56,17 +56,18 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
+  "contribution_branch_mappings": {},
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
       "url": "https://github.com/Microsoft/templates.docs.msft",
-      "branch": "master",
+      "branch": "main",
       "branch_mapping": {}
     },
     {
       "path_to_root": "_themes.pdf",
       "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
-      "branch": "master",
+      "branch": "main",
       "branch_mapping": {}
     }
   ],
@@ -100,6 +101,5 @@
       "target_framework": "net45",
       "version": "latest"
     }
-  ],
-  "contribution_branch_mappings": {}
+  ]
 }
