--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -50,7 +50,7 @@
     }
   ],
   "notification_subscribers": [
-    "riande@microsoft.com"
+    "v-alje@microsoft.com"
   ],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
